--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description: >
   with a focus on personal sites that are meant to impress.
 
 # A shorter description for the sidebar.
-tagline: Change `tagline` in `_config.yml
+tagline: 디자인에서 프론트엔드까지
 
 # A list of keywords for your blog
 keywords: []
@@ -41,18 +41,18 @@ logo: /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name: <firstname> <lastname>
-  email: <mail@domain.tld>
+  name: <kim> <minsong>
+  email: <ms0kim@naver.com>
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
 # Add links to the sidebar.
 menu:
-  - title: Example
+  - title: javascript
     url: /example/
-  - title: Documentation
+  - title: publishing
     url: /docs/
-  - title: About
+  - title: python
     url: /about/
 
 # Add links to the footer.
@@ -66,7 +66,7 @@ legal:
     url: /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright: © 2021. All rights reserved.
+copyright: minsong © 2021. All rights reserved.
 
 # Format of the permalinks
 permalink: /:categories/:year-:month-:day-:title/
@@ -85,13 +85,13 @@ remote_theme: hydecorp/hydejack@v9
 # ----------------------------------------------------------------------------------------
 
 # Sidebar image and theme color of the site.
-accent_image: /assets/img/sidebar-bg.jpg
-accent_color: rgb(79,177,186)
+accent_image: /assets/img/back.jpg
+accent_color: rgba(40,40,40,40)
 
 # This is used for the `theme-color` meta tag,
 # which changes the background color of the browser UI in certain browsers.
 # Defaults to `accent_color`.
-theme_color: rgb(25,55,71)
+theme_color: rgb(40,40,40)
 
 # The string encoding which fonts to fetch from Google Fonts.
 # See: <https://hydejack.com/docs/configuration/>
