--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ keywords: []
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo: /assets/img/logo.png
+logo: /assets/img/cat.svg
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
@@ -85,7 +85,7 @@ remote_theme: hydecorp/hydejack@v9
 # ----------------------------------------------------------------------------------------
 
 # Sidebar image and theme color of the site.
-accent_image: /assets/img/back.jpg
+accent_image: /assets/img/back.png
 accent_color: rgba(40,40,40,40)
 
 # This is used for the `theme-color` meta tag,
