--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description: >
   with a focus on personal sites that are meant to impress.
 
 # A shorter description for the sidebar.
-tagline: 디자인에서 프론트엔드까지
+tagline: 디자인에서 프론트엔드까지 민송
 
 # A list of keywords for your blog
 keywords: []
