--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description: >
   with a focus on personal sites that are meant to impress.
 
 # A shorter description for the sidebar.
-tagline: 디자인에서 프론트엔드까지 민송
+tagline: 디자인에서 프론트엔드까지
 
 # A list of keywords for your blog
 keywords: []
@@ -86,7 +86,7 @@ remote_theme: hydecorp/hydejack@v9
 
 # Sidebar image and theme color of the site.
 accent_image: /assets/img/back.png
-accent_color: rgba(40,40,40,0.336)
+accent_color: rgba(40,40,40,0)
 
 # This is used for the `theme-color` meta tag,
 # which changes the background color of the browser UI in certain browsers.
