--- a/_config.yml
+++ b/_config.yml
@@ -49,11 +49,11 @@ author:
 # Add links to the sidebar.
 menu:
   - title: javascript
-    url: /javascript/
+    url: /example/
   - title: publishing
-    url: /publishing/
+    url: /docs/
   - title: python
-    url: /python/
+    url: /about/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
